Added some images and more styling

--- a/index.html
+++ b/index.html
@@ -18,37 +18,45 @@
         <div>
             <h1>Droom</h1>
             <nav>
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </nav>
         </div>
-
     </div>
 
-    <header>
+    <div class="home">
 
-        <h2>Droom intro title</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur dolore corrupti porro hic? Consectetur nesciunt tempore fugiat aspernatur, voluptas, cum earum soluta at non odio quaerat repudiandae voluptatum provident? Vel?           
-        </p>
+        <header class = "container">
 
-    </header>
+            <h2>Droom intro title</h2>
+            <img src="images/Heading.jpg" alt="Photo of an office">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur dolore corrupti porro hic? Consectetur nesciunt tempore fugiat aspernatur, voluptas, cum earum soluta at non odio quaerat repudiandae voluptatum provident? Vel?           
+            </p>
 
-    <section>
+        </header>
 
-        <h2>Section 1 headline</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut, culpa praesentium rerum sit laudantium molestias corrupti laboriosam? Commodi id modi praesentium dolor. Nemo quasi quaerat voluptas? Tempora, minus necessitatibus.           
-        </p>
+        <section class = "container">
 
-    </section>
+            <h2>Section 1 headline</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut, culpa praesentium rerum sit laudantium molestias corrupti laboriosam? Commodi id modi praesentium dolor. Nemo quasi quaerat voluptas? Tempora, minus necessitatibus.           
+            </p>
 
-    <section>
+        </section>
 
-        <h2>Section 2 headline</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut, culpa praesentium rerum sit laudantium molestias corrupti laboriosam? Commodi id modi praesentium dolor. Nemo quasi quaerat voluptas? Tempora, minus necessitatibus.           
-        </p>
-        
-    </section>
+        <section class = "container">
+
+            <h2>Section 2 headline</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut, culpa praesentium rerum sit laudantium molestias corrupti laboriosam? Commodi id modi praesentium dolor. Nemo quasi quaerat voluptas? Tempora, minus necessitatibus.           
+            </p>
+            
+        </section>
+
+        <button>
+            Sign up!
+        </button>
+
+    </div>
 
     <footer>
         <p>Copyright Lambda Droom 2020</p>
