added about page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1>Droom</h1>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">About</a>
+                <a href="about.html">About</a>
                 <a href="#">Contact</a>
             </nav>
         </div>
@@ -41,6 +41,7 @@
             <h2>Section 1 headline</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut, culpa praesentium rerum sit laudantium molestias corrupti laboriosam? Commodi id modi praesentium dolor. Nemo quasi quaerat voluptas? Tempora, minus necessitatibus.           
             </p>
+            <img src="images/Window.jpg" alt="A photo of a person near office windows.">
 
         </section>
 
