added droom logo, minor styling changes

--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Droom</title>
+  <title>Droom About</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto&display=swap" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
 
 </head>
@@ -16,7 +16,7 @@
     
     <div class = "navBox">
         <div>
-            <h1>Droom</h1>
+            <img src="images/droom-logo.svg" alt="Droom">
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
