--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Droom</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto&display=swap" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
 
 </head>
@@ -16,7 +16,7 @@
 
     <div class = "navBox">
         <div>
-            <h1>Droom</h1>
+            <img src="images/droom-logo.svg" alt="Droom">
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
