add media queries for desktop

--- a/index.html
+++ b/index.html
@@ -36,22 +36,27 @@
 
         </header>
 
-        <section class = "container">
+        <div class="sectionContainer">
 
-            <h2>Section 1 headline</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut, culpa praesentium rerum sit laudantium molestias corrupti laboriosam? Commodi id modi praesentium dolor. Nemo quasi quaerat voluptas? Tempora, minus necessitatibus.           
-            </p>
-            <img src="images/Window.jpg" alt="A photo of a person near office windows.">
+            <section class = "container">
 
-        </section>
+                <h2>Section 1 headline</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut, culpa praesentium rerum sit laudantium molestias corrupti laboriosam? Commodi id modi praesentium dolor. Nemo quasi quaerat voluptas? Tempora, minus necessitatibus.           
+                </p>
+                <img class ="tabletImg" src="images/Window.jpg" alt="A photo of a person near office windows.">
 
-        <section class = "container">
+            </section>
 
-            <h2>Section 2 headline</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut, culpa praesentium rerum sit laudantium molestias corrupti laboriosam? Commodi id modi praesentium dolor. Nemo quasi quaerat voluptas? Tempora, minus necessitatibus.           
-            </p>
-            
-        </section>
+            <section class = "container">
+
+                <h2>Section 2 headline</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut, culpa praesentium rerum sit laudantium molestias corrupti laboriosam? Commodi id modi praesentium dolor. Nemo quasi quaerat voluptas? Tempora, minus necessitatibus.           
+                </p>
+                <img src="images/Suit.jpg" alt="A photo of a suit and tie.">
+                
+            </section>
+
+        </div>
 
         <button>
             Sign up!
