Added content in place of lorem ipsum

--- a/about.html
+++ b/about.html
@@ -28,21 +28,93 @@
     <div class="about">
 
         <header class="container">
-            <h1>About Intro</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, excepturi adipisci, perspiciatis ad in non corporis tenetur voluptatibus consectetur eius ipsum. Autem repellat dignissimos facere, in pariatur velit at asperiores.
+            <h1>The Droom Team</h1>
+            <p>We are a team of web developer students studying at Lambda School for gifted mutants. We are putting our newly acquired skills to the test in this here application. 
             </p>
         </header>
 
         <section class="container">
-            <h1>About Stuff</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis amet aperiam rem deserunt itaque. Voluptatum, omnis non distinctio repudiandae autem, reiciendis velit facere ipsa deleniti quod corrupti ipsum facilis numquam.
+            <h1>Marketing Team</h1>
+            <p>The Marketing Team provides new users an introduction to Droom!</p>
+            <div class="team">
+                <div class="member">
+                    <h3>James Pico</h2>
+                    <p>Extra junior, extra markety. James throws in his two cents while marveling at the competencies of the rest of the team.
+                    </p>
+                    <img src="images/James.jpg" alt="A photo of James">
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <h1>Front-end Team</h1>
+            <p>The Front-end Team is responsible for the bulk of the functionality in the application.</p>
+            <div class="team">
+                <div class="member">
+                    <h3>Austin Huisinga</h2>
+                    <p>A react 1 student with excellent fashion sense and an appetite for justice. 
+                    </p>
+                    <img src="images/Austin.jpg" alt="A photo of Austin">
+                </div>
+                <div class="member">
+                    <h3>Svyatoslav Okshin</h2>
+                    <p>A react 1 student hailing from the frozen wastes of Siberia. The frigid winters have hardened this man into the stone-cold coder he is today. 
+                    </p>
+                    <img src="images/Svet.jpg" alt="A photo of Svyatoslav">
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <div class="team">
+                <div class="member">
+                    <h3>Ana Monteiro</h2>
+                    <p>A react 2 student fighting time zones and the outlandish English language to deliver her code from the far reaches of Portugal.  
+                    </p>
+                    <img src="images/Ana.jpg" alt="A photo of Ana">
+                </div>
+                <div class="member">
+                    <h3>Chris Oakes</h2>
+                    <p>A react 2 student possessing exceptional knowledge in his field and an exceptional hair style. 
+                    </p>
+                    <img src="images/Chris.jpg" alt="A photo of Chris">
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <h1>Back-end Team</h1>
+            <p>This team builds import structure for the Front-end Team.</p>
+            <div class="team">
+                <div class="member">
+                    <h3>Nick Alicaya</h2>
+                    <p>A senior student with origins in the barbaric lands of California, this man is the back-bone of the Droom team, providing leadership and structure.
+                    </p>
+                    <img src="images/Nick.jpg" alt="A photo of Nick">
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <h1>Lambda Leadership</h1>
+            <div class="team">
+                <div class="member">
+                    <h3>Harjoth Khara</h2>
+                    <p>A member of Lambda staff, Harjoth has been present to guide our rag-tag team of junior developers to build something presentable.
+                    </p>
+                    <img src="images/Harjoth.png" alt="A photo of Harjoth">
+                </div>
+            </div>
+        </section>
+
+        <section class="container last">
+            <h1>Pretty Cool, eh?</h1>
+            <p>Here is a neat picture of a guy in a suit.
             </p>
             <img src="images/Tie.jpg" alt="A photo of a suit and tie.">
         </section>
 
-        <button>
-            Sign up!
-        </button>
+        <a href="about.html">Top</a>
 
     </div>
     <footer>
