--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
         <header class = "container">
 
-            <h2>Droom intro title</h2>
+            <h2>Welcome to Droom!</h2>
             <img src="images/Heading.jpg" alt="Photo of an office">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur dolore corrupti porro hic? Consectetur nesciunt tempore fugiat aspernatur, voluptas, cum earum soluta at non odio quaerat repudiandae voluptatum provident? Vel?           
+            <p>The word droom stems from the Dutch language, meaning dream. We here at Droom strive to make your career dreams a reality by matching eager job seekers with voracious employers.          
             </p>
 
         </header>
@@ -40,8 +40,9 @@
 
             <section class = "container">
 
-                <h2>Section 1 headline</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut, culpa praesentium rerum sit laudantium molestias corrupti laboriosam? Commodi id modi praesentium dolor. Nemo quasi quaerat voluptas? Tempora, minus necessitatibus.           
+                <h2>Find the job you've been yearning for!</h2>
+                <p>Droom provides the you the opportunity to cast your fledgling resume into the wanting retinas of professional employers.
+                    Build a profile and enjoy the inundation of available positions related to your experience. Swipe right to show your interest in a position and watch the interviews roll in!          
                 </p>
                 <img class ="tabletImg" src="images/Window.jpg" alt="A photo of a person near office windows.">
 
@@ -49,8 +50,9 @@
 
             <section class = "container">
 
-                <h2>Section 2 headline</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut, culpa praesentium rerum sit laudantium molestias corrupti laboriosam? Commodi id modi praesentium dolor. Nemo quasi quaerat voluptas? Tempora, minus necessitatibus.           
+                <h2>Need a qualified candidate for your business?</h2>
+                <p>Set up a company profile with us to be sent only the most qualified candidates in our database.
+                    Modify your requirements at anytime to narrow or broaden the pool of avaialbe candidates. Swipe right to open a line of communication with a candidate.            
                 </p>
                 <img src="images/Suit.jpg" alt="A photo of a suit and tie.">
                 
