experiemented with css grid and flexbox. Minor styling changes

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
         <header class="container">
             <h1>The Droom Team</h1>
-            <p>We are a team of web developer students studying at Lambda School for gifted mutants. We are putting our newly acquired skills to the test in this here application. 
+            <p>We are a team of web developer students studying at Lambda School of JavaCraft and coding wizardry. We are putting our newly acquired skills to the test in this here application. 
             </p>
         </header>
 
@@ -52,7 +52,7 @@
             <div class="team">
                 <div class="member">
                     <h3>Austin Huisinga</h2>
-                    <p>A react 1 student with excellent fashion sense and an appetite for justice. 
+                    <p>A react 1 student with excellent fashion sense and an appetite for justice. Austin writes code with the best of them.
                     </p>
                     <img src="images/Austin.jpg" alt="A photo of Austin">
                 </div>
@@ -69,7 +69,7 @@
             <div class="team">
                 <div class="member">
                     <h3>Ana Monteiro</h2>
-                    <p>A react 2 student fighting time zones and the outlandish English language to deliver her code from the far reaches of Portugal.  
+                    <p>A react 2 student fighting time zones and the outlandish English language to deliver her clever code from the far reaches of Portugal. Muito legal. 
                     </p>
                     <img src="images/Ana.jpg" alt="A photo of Ana">
                 </div>
@@ -84,7 +84,7 @@
 
         <section class="container">
             <h1>Back-end Team</h1>
-            <p>This team builds import structure for the Front-end Team.</p>
+            <p>This team builds important structure for the Front-end Team.</p>
             <div class="team">
                 <div class="member">
                     <h3>Nick Alicaya</h2>
