Experimented with backgrounds and styles

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <section class = "container">
 
                 <h2>Need a qualified candidate for your business?</h2>
-                <p>Set up a company profile with us to be sent only the most qualified candidates in our database.
-                    Modify your requirements at anytime to narrow or broaden the pool of avaialbe candidates. Swipe right to open a line of communication with a candidate.            
+                <p>Set up a company profile with us to be sent the most qualified candidates in our database.
+                    Modify your requirements at anytime to narrow or broaden the pool of avaialbe candidates. Swipe right to open a line of communication with an interested candidate.            
                 </p>
                 <img src="images/Suit.jpg" alt="A photo of a suit and tie.">
                 
