Changed some words

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <h2>Find the job you've been yearning for!</h2>
                 <p>Droom provides the you the opportunity to cast your fledgling resume into the wanting retinas of professional employers.
-                    Build a profile and enjoy the inundation of available positions related to your experience. Swipe right to show your interest in a position and watch the interviews roll in!          
+                    Build a profile and enjoy an inundation of available positions related to your experience. Swipe right to show your interest in a position and watch the interviews roll in!          
                 </p>
                 <img class ="tabletImg" src="images/Window.jpg" alt="A photo of a person near office windows.">
 
@@ -52,7 +52,7 @@
 
                 <h2>Need a qualified candidate for your business?</h2>
                 <p>Set up a company profile with us to be sent the most qualified candidates in our database.
-                    Modify your requirements at anytime to narrow or broaden the pool of avaialbe candidates. Swipe right to open a line of communication with an interested candidate.            
+                    Modify your job requirements at anytime to narrow or broaden the pool of avaialbe candidates. Swipe right to open a line of communication with an interested candidate.            
                 </p>
                 <img src="images/Suit.jpg" alt="A photo of a suit and tie.">
                 
