--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="#">Log in</a>
+                <a href="https://front-end-cyan.now.sh/">Log in</a>
             </nav>
         </div>
     </div>
@@ -88,7 +88,7 @@
             <div class="team">
                 <div class="member">
                     <h3>Nick Alicaya</h2>
-                    <p>A senior student with origins in the barbaric lands of California, this man is the back-bone of the Droom team, providing leadership and structure.
+                    <p>A senior student with origins in the barbaric lands of New Jersey, this man is the back-bone of the Droom team, providing leadership and structure.
                     </p>
                     <img src="images/Nick.jpg" alt="A photo of Nick">
                 </div>
