--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="#">Log in</a>
+                <a href="https://front-end-cyan.now.sh/">Log in</a>
             </nav>
         </div>
     </div>
@@ -60,9 +60,11 @@
 
         </div>
 
+        <a href="https://front-end-cyan.now.sh/">
         <button>
             Sign up!
         </button>
+        </a>
 
     </div>
 
