Mucked about with flexbox

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <h2>Welcome to Droom!</h2>
             <img src="images/Heading.jpg" alt="Photo of an office">
-            <p>The word droom stems from the Dutch language, meaning dream. We here at Droom strive to make your career dreams a reality by matching eager job seekers with voracious employers.          
+            <p class = "introP">The word droom stems from the Dutch language, meaning dream. We here at Droom strive to make your career dreams a reality by matching eager job seekers with voracious employers.          
             </p>
 
         </header>
@@ -60,7 +60,7 @@
 
         </div>
 
-        <a href="https://front-end-cyan.now.sh/">
+        <a class = "buttonTag" href="https://front-end-cyan.now.sh/">
         <button>
             Sign up!
         </button>
